upgrade pip packages if already installed

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -37,6 +37,6 @@ WORKDIR ${HOME}
 RUN pip install --user virtualenvwrapper \
     && /bin/bash -c "source ${HOME}/.local/bin/virtualenvwrapper.sh \
     && mkvirtualenv --python=/usr/bin/python3 p3 \
-    && pip install ipython pandas sqlalchemy \
+    && pip install --upgrade ipython pandas sqlalchemy \
     && echo source ${HOME}/.local/bin/virtualenvwrapper.sh >> ${HOME}/.bashrc \
     && echo source ${HOME}/.virtualenvs/p3/bin/activate >> ${HOME}/.bashrc"
