line continuation char: \

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -18,7 +18,7 @@ RUN mkdir ${HOME}/tools
 
 WORKDIR ${HOME}/tools/
 
-RUN wget https://github.com/gt1/biobambam2/releases/download/2.0.33-release-20160317091357/biobambam2-2.0.33-release-20160317091357-x86_64-etch-linux-gnu.tar.gz
+RUN wget https://github.com/gt1/biobambam2/releases/download/2.0.33-release-20160317091357/biobambam2-2.0.33-release-20160317091357-x86_64-etch-linux-gnu.tar.gz \
     && tar xf biobambam2-2.0.33-release-20160317091357-x86_64-etch-linux-gnu.tar.gz \
     && mv biobambam2-2.0.33-release-20160317091357-x86_64-etch-linux-gnu biobambam \
     && rm *.tar.gz
