keep biobambam2 in download dir, and ~/.local/lib is already occupied

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -20,10 +20,8 @@ WORKDIR ${HOME}/tools/
 
 RUN wget https://github.com/gt1/biobambam2/releases/download/2.0.33-release-20160317091357/biobambam2-2.0.33-release-20160317091357-x86_64-etch-linux-gnu.tar.gz \
     && tar xf biobambam2-2.0.33-release-20160317091357-x86_64-etch-linux-gnu.tar.gz \
-    && mv biobambam2-2.0.33-release-20160317091357-x86_64-etch-linux-gnu biobambam \
+    && mv biobambam2-2.0.33-release-20160317091357-x86_64-etch-linux-gnu biobambam2 \
     && rm *.tar.gz
-RUN mkdir -p ${HOME}/.local/
-RUN mv ${HOME}/tools/biobambam/* ${HOME}/.local/
-ENV PATH ${HOME}/.local/bin:$PATH
+ENV PATH ${HOME}/tools/biobambam2/bin:$PATH
 
 WORKDIR ${HOME}
