--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,5 +1,7 @@
 FROM quay.io/jeremiahsavage/cdis_base
 
+ENV biobambam_docker 0.1
+
 MAINTAINER Jeremiah H. Savage <jeremiahsavage@gmail.com>
 
 USER root
