retry with root

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -2,6 +2,8 @@ FROM ubuntu:xenial-20160713
 
 MAINTAINER Jeremiah H. Savage <jeremiahsavage@gmail.com>
 
+USER root
+
 RUN apt-get update && apt-get install -y \
     wget
 
