--- a/2.0.87/Dockerfile
+++ b/2.0.87/Dockerfile
@@ -1,36 +1,9 @@
 ARG REPOSITORY=docker.osdc.io
-ARG BUILDER_TAG=2.2.0
+ARG BUILDER_TAG=2.3.0
 FROM ${REPOSITORY}/ncigdc/base-u22.04-builder:${BUILDER_TAG} AS builder
 
-ARG VERSION
-
-ENV URL=https://path/to/file/$VERSION/software-$VERSION.tar.gz
-    && curl --silent https://gitlab.com/german.tischler/libmaus2/repository/archive.tar.gz\?ref\=2.0.610-release-20190328154814 -o libmaus2.tar.gz \
-    && curl --silent https://gitlab.com/german.tischler/biobambam2/repository/archive.tar.gz\?ref\=2.0.95-release-20190320141403 -o biobambam2.tar.gz \
-
-RUN apt-get update \
-	&& apt-get install -y \
-		build-essential \
-	&& apt-get clean \
-	&& rm -rf /var/lib/apt/lists/*
-
-# Example download and compile step
-RUN wget $URL \
-	&& tar xf software-${VERSION}.tar.gz \
-	&& cd software-${VERSION} \
-	&& make \
-	&& mv bin/* /usr/local/bin \
-	&& cd .. \
-	&& rm -rf software-${VERSION}
-
-# For a multi-stage build
-
-FROM ${REPOSITORY}/ncigdc/base-u22.04:${BUILDER_TAG}
-
-COPY --from=builder /usr/local/* /usr/local/
-FROM ubuntu:disco-20190310
-
-MAINTAINER Jeremiah H. Savage <jeremiahsavage@gmail.com>
+ENV LIBMAUS_URL=https://gitlab.com/german.tischler/libmaus2/repository/archive.tar.gz\?ref\=2.0.610-release-20190328154814
+ENV BIOBAMBAM_URL=https://gitlab.com/german.tischler/biobambam2/repository/archive.tar.gz\?ref\=2.0.95-release-20190320141403
 
 ENV LD_LIBRARY_PATH /usr/local/lib
 
@@ -44,7 +17,7 @@ RUN apt-get update \
         zlib1g-dev \
     && apt-get clean \
     && rm -rf /usr/local/* \
-
+    && curl --silent ${LIBMAUS_URL} -o libmaus2.tar.gz \
     && libmaus2files=$(tar -axvf libmaus2.tar.gz) \
     && libmaus2dir=$(echo ${libmaus2files} | cut -f1 -d" ") \
     && cd ${libmaus2dir} \
@@ -56,6 +29,7 @@ RUN apt-get update \
     && make install \
     && cd ../ \
     && rm -rf ${libmaus2dir} libmaus2.tar.gz \
+    && curl --silent ${BIOBAMBAM_URL} -o biobambam2.tar.gz \
     && biobambam2files=$(tar -axvf biobambam2.tar.gz) \
     && biobambam2dir=$(echo ${biobambam2files} | cut -f1 -d" ") \
     && cd ${biobambam2dir} \
