--- a/2.0.87/Dockerfile
+++ b/2.0.87/Dockerfile
@@ -3,7 +3,7 @@ ARG BUILDER_TAG=2.3.0
 FROM ${REPOSITORY}/ncigdc/base-u22.04-builder:${BUILDER_TAG} AS builder
 
 ENV LIBMAUS_URL=https://gitlab.com/german.tischler/libmaus2/repository/archive.tar.gz\?ref\=2.0.610-release-20190328154814
-ENV BIOBAMBAM_URL=https://gitlab.com/german.tischler/biobambam2/repository/archive.tar.gz\?ref\=2.0.95-release-20190320141403
+ENV BIOBAMBAM_URL=https://gitlab.com/german.tischler/biobambam2/-/archive/2.0.87-release-20180301132713/biobambam2-2.0.87-release-20180301132713.tar.gz
 
 ENV LD_LIBRARY_PATH /usr/local/lib
 
