--- a/2.0.95/Dockerfile
+++ b/2.0.95/Dockerfile
@@ -2,7 +2,7 @@ ARG REPOSITORY=docker.osdc.io
 ARG BUILDER_TAG=2.3.0
 FROM ${REPOSITORY}/ncigdc/base-u22.04-builder:${BUILDER_TAG} AS builder
 
-ENV LIBMAUS_URL=https://gitlab.com/german.tischler/libmaus2/-/archive/2.0.610-release-20190328154814/libmaus2-2.0.610-release-20190328154814.tar.gz
+ENV LIBMAUS_URL=https://gitlab.com/german.tischler/libmaus2/repository/archive.tar.gz\?ref\=2.0.610-release-20190328154814
 ENV BIOBAMBAM_URL=https://gitlab.com/german.tischler/biobambam2/-/archive/2.0.95-release-20190320141403/biobambam2-2.0.95-release-20190320141403.tar.gz
 ENV LD_LIBRARY_PATH /usr/local/lib
 
