--- a/Dockerfile.multi
+++ b/Dockerfile.multi
@@ -1,22 +1,54 @@
 ARG REPOSITORY=docker.osdc.io
 ARG BUILDER_TAG=3.1.0
 FROM ${REPOSITORY}/ncigdc/amzn2023-builder:${BUILDER_TAG} AS builder
+ENV LD_LIBRARY_PATH /usr/local/lib
 
 ARG VERSION
 
-ENV URL=https://path/to/file/$VERSION/software-$VERSION.tar.gz
+ENV URL=https://gitlab.com/german.tischler/biobambam2/repository/archive/v$VERSION.tar.gz
 
-# Example add package step
-RUN dnf install -y x y z
-
-# Example download and compile step
-RUN wget $URL \
-	&& tar xf software-${VERSION}.tar.gz \
-	&& cd software-${VERSION} \
-	&& make \
-	&& mv bin/* /usr/local/bin \
-	&& cd .. \
-	&& rm -rf software-${VERSION}
+RUN dnf update \
+    && dnf install -y \
+        autoconf \
+        curl \
+        g++ \
+        libtool \
+        pkg-config \
+        zlib1g-dev \
+    && dnf clean \
+    && rm -rf /usr/local/* \
+    && curl --silent https://gitlab.com/german.tischler/libmaus2/repository/archive.tar.gz\?ref\=2.0.610-release-20190328154814 -o libmaus2.tar.gz \
+    && curl --silent https://gitlab.com/german.tischler/biobambam2/repository/archive.tar.gz\?ref\=2.0.95-release-20190320141403 -o biobambam2.tar.gz \
+    && libmaus2files=$(tar -axvf libmaus2.tar.gz) \
+    && libmaus2dir=$(echo ${libmaus2files} | cut -f1 -d" ") \
+    && cd ${libmaus2dir} \
+    && libtoolize \
+    && aclocal \
+    && autoreconf -i -f \
+    && ./configure \
+    && make -j4 \
+    && make install \
+    && cd ../ \
+    && rm -rf ${libmaus2dir} libmaus2.tar.gz \
+    && biobambam2files=$(tar -axvf biobambam2.tar.gz) \
+    && biobambam2dir=$(echo ${biobambam2files} | cut -f1 -d" ") \
+    && cd ${biobambam2dir} \
+    && export LIBMAUSPREFIX=/usr/local \
+    && autoreconf -i -f \
+    && ./configure --with-libmaus2=${LIBMAUSPREFIX} \
+    && make -j4 \
+    && make install \
+    && cd ../ \
+    && rm -rf ${biobambam2dir} biobambam2.tar.gz \
+    && dnf remove --purge -y \
+        autoconf \
+        curl \
+        g++ \
+        libtool \
+        pkg-config \
+        zlib1g-dev \
+    && dnf autoremove -y \
+    && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 
 # For a multi-stage build
 
