--- a/Dockerfile.multi
+++ b/Dockerfile.multi
@@ -1,7 +1,7 @@
 ARG REPOSITORY=docker.osdc.io
 ARG BUILDER_TAG=3.1.0
 FROM ${REPOSITORY}/ncigdc/amzn2023-builder:${BUILDER_TAG} AS builder
-ENV LD_LIBRARY_PATH /usr/local/lib
+ENV LD_LIBRARY_PATH=/usr/local/lib
 
 ARG VERSION
 
