update Docker files

--- a/2.0.87/Dockerfile
+++ b/2.0.87/Dockerfile
@@ -7,8 +7,8 @@ ENV BIOBAMBAM_URL=https://gitlab.com/german.tischler/biobambam2/-/archive/2.0.87
 
 ENV LD_LIBRARY_PATH /usr/local/lib
 
-RUN apt-get update \
-    && apt-get install -y \
+RUN dnf update \
+    && dnf install -y \
         autoconf \
         curl \
         g++ \
@@ -16,7 +16,7 @@ RUN apt-get update \
         pkg-config \
         zlib1g-dev \
         libboost-dev \
-    && apt-get clean \
+    && dnf clean \
     && rm -rf /usr/local/* \
     && curl --silent ${LIBMAUS_URL} -o libmaus2.tar.gz \
     && libmaus2files=$(tar -axvf libmaus2.tar.gz) \
@@ -42,12 +42,12 @@ RUN curl --silent ${BIOBAMBAM_URL} -o biobambam2.tar.gz \
     && make install \
     && cd ../ \
     && rm -rf ${biobambam2dir} biobambam2.tar.gz \
-    && apt-get remove --purge -y \
+    && dnf remove --purge -y \
         autoconf \
         curl \
         g++ \
         libtool \
         pkg-config \
         zlib1g-dev \
-    && apt-get autoremove -y \
+    && dnf autoremove -y \
     && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
