--- a/2.0.87/justfile
+++ b/2.0.87/justfile
@@ -1,5 +1,5 @@
-SOFTWARE := "biobambam"
-DOCKERFILE := "./Dockerfile"
+SOFTWARE := "biobambam2"
+DOCKERFILE := "../Dockerfile.multi"
 BASE_CONTAINER_REGISTRY := env_var_or_default("BASE_CONTAINER_REGISTRY", "docker.osdc.io")
 
 VERSION := `basename $(pwd)`
