--- a/Dockerfile.multi
+++ b/Dockerfile.multi
@@ -7,8 +7,7 @@ ARG VERSION
 
 ENV URL=https://gitlab.com/german.tischler/biobambam2/repository/archive/v$VERSION.tar.gz
 
-RUN dnf update \
-    && dnf install -y \
+RUN dnf install -y \
         autoconf \
         curl \
         g++ \
