--- a/Dockerfile.multi
+++ b/Dockerfile.multi
@@ -7,7 +7,8 @@ ARG VERSION
 
 ENV URL=https://gitlab.com/german.tischler/biobambam2/repository/archive/v$VERSION.tar.gz
 
-RUN dnf install -y \
+RUN dnf update -y
+    && dnf install -y \
         autoconf \
         curl \
         g++ \
