--- a/Dockerfile.multi
+++ b/Dockerfile.multi
@@ -14,7 +14,7 @@ RUN dnf update -y \
         libtool \
         pkgconf \
         zlib-devel \
-    && dnf clean \
+    && dnf clean all \
     && rm -rf /usr/local/* \
     && curl --silent https://gitlab.com/german.tischler/libmaus2/repository/archive.tar.gz\?ref\=2.0.610-release-20190328154814 -o libmaus2.tar.gz \
     && curl --silent https://gitlab.com/german.tischler/biobambam2/repository/archive.tar.gz\?ref\=2.0.95-release-20190320141403 -o biobambam2.tar.gz \
