--- a/Dockerfile.multi
+++ b/Dockerfile.multi
@@ -14,6 +14,7 @@ RUN dnf update -y \
         libtool \
         pkgconf \
         zlib-devel \
+        boost-devel \
     && dnf clean all \
     && rm -rf /usr/local/* \
     && curl --silent -L https://gitlab.com/german.tischler/libmaus2/-/archive/master/libmaus2-master.tar.gz\?ref\=2.0.610-release-20190328154814 -o libmaus2.tar.gz \
